// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts2swift > snapshots Swift output for ArrayParameter.d.ts > ArrayParameter 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func checkArray(_ a: JSObject) throws (JSException) -> Void

@JSFunction func checkArrayWithLength(_ a: JSObject, _ b: Double) throws (JSException) -> Void

@JSFunction func checkArray(_ a: JSObject) throws (JSException) -> Void
"
`;

exports[`ts2swift > snapshots Swift output for Async.d.ts > Async 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func asyncReturnVoid() throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripInt(_ v: Double) throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripString(_ v: String) throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripBool(_ v: Bool) throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripFloat(_ v: Double) throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripDouble(_ v: Double) throws (JSException) -> JSPromise

@JSFunction func asyncRoundTripJSObject(_ v: JSObject) throws (JSException) -> JSPromise
"
`;

exports[`ts2swift > snapshots Swift output for Interface.d.ts > Interface 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func returnAnimatable() throws (JSException) -> Animatable

@JSClass struct Animatable {
    @JSFunction func animate(_ keyframes: JSObject, _ options: JSObject) throws (JSException) -> JSObject
    @JSFunction func getAnimations(_ options: JSObject) throws (JSException) -> JSObject
}
"
`;

exports[`ts2swift > snapshots Swift output for InvalidPropertyNames.d.ts > InvalidPropertyNames 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func createArrayBuffer() throws (JSException) -> ArrayBufferLike

@JSClass struct ArrayBufferLike {
    @JSGetter var byteLength: Double
    @JSFunction func slice(_ begin: Double, _ end: Double) throws (JSException) -> ArrayBufferLike
}

@JSFunction func createWeirdObject() throws (JSException) -> WeirdNaming

@JSClass struct WeirdNaming {
    @JSGetter var normalProperty: String
    @JSSetter func setNormalProperty(_ value: String) throws (JSException)
    @JSGetter(jsName: "property-with-dashes") var property_with_dashes: Double
    @JSSetter(jsName: "property-with-dashes") func setProperty_with_dashes(_ value: Double) throws (JSException)
    @JSGetter(jsName: "123invalidStart") var _123invalidStart: Bool
    @JSSetter(jsName: "123invalidStart") func set_123invalidStart(_ value: Bool) throws (JSException)
    @JSGetter(jsName: "property with spaces") var property_with_spaces: String
    @JSSetter(jsName: "property with spaces") func setProperty_with_spaces(_ value: String) throws (JSException)
    @JSGetter(jsName: "@specialChar") var _specialChar: Double
    @JSSetter(jsName: "@specialChar") func set_specialChar(_ value: Double) throws (JSException)
    @JSGetter var constructor: String
    @JSSetter func setConstructor(_ value: String) throws (JSException)
    @JSGetter var \`for\`: String
    @JSSetter func setFor(_ value: String) throws (JSException)
    @JSGetter var \`Any\`: String
    @JSSetter(jsName: "Any") func setAny(_ value: String) throws (JSException)
    @JSFunction func \`as\`() throws (JSException) -> Void
    @JSFunction func \`try\`() throws (JSException) -> Void
}

@JSClass(jsName: "$Weird") struct _Weird {
    @JSFunction init() throws (JSException)
    @JSFunction(jsName: "method-with-dashes") func method_with_dashes() throws (JSException) -> Void
}

@JSFunction func createWeirdClass() throws (JSException) -> _Weird
"
`;

exports[`ts2swift > snapshots Swift output for MultipleImportedTypes.d.ts > MultipleImportedTypes 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func createDatabaseConnection(_ config: JSObject) throws (JSException) -> DatabaseConnection

@JSClass struct DatabaseConnection {
    @JSFunction func connect(_ url: String) throws (JSException) -> Void
    @JSFunction func execute(_ query: String) throws (JSException) -> JSObject
    @JSGetter var isConnected: Bool
    @JSGetter var connectionTimeout: Double
    @JSSetter func setConnectionTimeout(_ value: Double) throws (JSException)
}

@JSFunction func createLogger(_ level: String) throws (JSException) -> Logger

@JSClass struct Logger {
    @JSFunction func log(_ message: String) throws (JSException) -> Void
    @JSFunction func error(_ message: String, _ error: JSObject) throws (JSException) -> Void
    @JSGetter var level: String
}

@JSFunction func getConfigManager() throws (JSException) -> ConfigManager

@JSClass struct ConfigManager {
    @JSFunction func get(_ key: String) throws (JSException) -> JSObject
    @JSFunction func set(_ key: String, _ value: JSObject) throws (JSException) -> Void
    @JSGetter var configPath: String
}
"
`;

exports[`ts2swift > snapshots Swift output for PrimitiveParameters.d.ts > PrimitiveParameters 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func check(_ a: Double, _ b: Bool) throws (JSException) -> Void
"
`;

exports[`ts2swift > snapshots Swift output for PrimitiveReturn.d.ts > PrimitiveReturn 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func checkNumber() throws (JSException) -> Double

@JSFunction func checkBoolean() throws (JSException) -> Bool
"
`;

exports[`ts2swift > snapshots Swift output for ReExportFrom.d.ts > ReExportFrom 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func jsRoundTripNumber(_ v: Double) throws (JSException) -> Double

@JSClass struct JsGreeter {
    @JSFunction init(_ name: String) throws (JSException)
    @JSFunction func greet() throws (JSException) -> String
}
"
`;

exports[`ts2swift > snapshots Swift output for StringEnum.d.ts > StringEnum 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

enum FeatureFlag: String {
    case foo = "foo"
    case bar = "bar"
}
extension FeatureFlag: _BridgedSwiftEnumNoPayload, _BridgedSwiftRawValueEnum {}

@JSFunction func takesFeatureFlag(_ flag: FeatureFlag) throws (JSException) -> Void

@JSFunction func returnsFeatureFlag() throws (JSException) -> FeatureFlag
"
`;

exports[`ts2swift > snapshots Swift output for StringParameter.d.ts > StringParameter 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func checkString(_ a: String) throws (JSException) -> Void

@JSFunction func checkStringWithLength(_ a: String, _ b: Double) throws (JSException) -> Void
"
`;

exports[`ts2swift > snapshots Swift output for StringReturn.d.ts > StringReturn 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func checkString() throws (JSException) -> String
"
`;

exports[`ts2swift > snapshots Swift output for TS2SkeletonLike.d.ts > TS2SkeletonLike 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func createTS2Skeleton() throws (JSException) -> TypeScriptProcessor

@JSClass struct TypeScriptProcessor {
    @JSFunction func convert(_ ts: String) throws (JSException) -> String
    @JSFunction func validate(_ ts: String) throws (JSException) -> Bool
    @JSGetter var version: String
}

@JSFunction func createCodeGenerator(_ format: String) throws (JSException) -> CodeGenerator

@JSClass struct CodeGenerator {
    @JSFunction func generate(_ input: JSObject) throws (JSException) -> String
    @JSGetter var outputFormat: String
}
"
`;

exports[`ts2swift > snapshots Swift output for TypeAlias.d.ts > TypeAlias 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func checkSimple(_ a: Double) throws (JSException) -> Void
"
`;

exports[`ts2swift > snapshots Swift output for TypeScriptClass.d.ts > TypeScriptClass 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSClass struct Greeter {
    @JSGetter var name: String
    @JSSetter func setName(_ value: String) throws (JSException)
    @JSGetter var age: Double
    @JSFunction init(_ name: String) throws (JSException)
    @JSFunction func greet() throws (JSException) -> String
    @JSFunction func changeName(_ name: String) throws (JSException) -> Void
}
"
`;

exports[`ts2swift > snapshots Swift output for VoidParameterVoidReturn.d.ts > VoidParameterVoidReturn 1`] = `
"// NOTICE: This is auto-generated code by BridgeJS from JavaScriptKit,
// DO NOT EDIT.
//
// To update this file, just rebuild your project or run
// \`swift package bridge-js\`.

@_spi(Experimental) @_spi(BridgeJS) import JavaScriptKit

@JSFunction func check() throws (JSException) -> Void
"
`;
